--- a/app/views/app_forms/new.html.erb
+++ b/app/views/app_forms/new.html.erb
@@ -4,7 +4,7 @@
 
     <h1 class="text-center">Start a New Application</h1>
 
-    <hr>
+    <hr class="hr-red mt-4 mb-5">
 
     <%= render 'form', app_form: @app_form %>
 
