--- a/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
@@ -17,7 +17,7 @@
     </p>
     <p>
       You have been awarded a grant for <strong><%= number_to_currency(@application.requested_amount, unit: "$") %></strong> for the following hardship:
-      <br><em><%= @application.hardship_description %></em>
+      <br><em><%= @application.description %></em>
     </p>
     <p>
       If you haven't already done so, you can <%= link_to "create a TOCA Cares account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> using your TOCA email address.
