--- a/app/views/charity_mailer/charity_denied_email.html.erb
+++ b/app/views/charity_mailer/charity_denied_email.html.erb
@@ -18,7 +18,7 @@
     <p>
       The Decision Committee thoroughly reviewed your application and has determined, based on the TOCA Cares Corporate Assistance guidelines, that your situation does not meet one or more of the qualifications for aid. Because this is a community fund, the Decision Committee is tasked with the difficult responsibility of making sure the fund is only used in authorized situations. Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons your situation may not be eligible. Remember that you must be personally involved in the charity to get sponsorship.
     </p>
-    <% vote = Vote.where(application_type: @application.application_type, application_id: @application.id, seconded: true).first %>
+    <% vote = Vote.where(application_type: "AppForm", application_id: @application.id, seconded: true).first %>
     <p>
       Your specific appliation was denied because:
       <ul>
