--- a/app/views/hardship_mailer/approved_hardship_to_helping_hands_email.html.erb
+++ b/app/views/hardship_mailer/approved_hardship_to_helping_hands_email.html.erb
@@ -58,7 +58,7 @@
       <p><strong>Amount Approved: </strong><%= number_to_currency(@application.requested_amount, unit: "$") %></p>
       <p><strong>Amount Applicant Can Pay: </strong><%= number_to_currency(@application.self_fund, unit: "$") %></p>
       <% if @application.loan_preferred %><p><strong>Loan Preferred: </strong>Yes</p><% end %>
-      <p><strong>Description of Opportunity: </strong><%= @application.hardship_description %></p>
+      <p><strong>Description of Opportunity: </strong><%= @application.description %></p>
     </div> <!-- box -->
 
     <p>
