--- a/app/views/hardship_mailer/for_other_hardship_denied_email.html.erb
+++ b/app/views/hardship_mailer/for_other_hardship_denied_email.html.erb
@@ -21,7 +21,7 @@
     <p>
       Additionally, since contributors to the fund receive tax benefits, the Decision Committee must follow specific legal regulations, which can hinder what qualifies and what does not. There are a number of reasons the situation may not be eligible; some examples may include, overuse of fund previously, not enough time between fund applications, misunderstanding of the fund, lack of demonstrated need, lack of relative hardship compared to other applications, etc.
     </p>
-    <% vote = Vote.where(application_type: @application.application_type, application_id: @application.id, seconded: true).first %>
+    <% vote = Vote.where(application_type: "AppForm", application_id: @application.id, seconded: true).first %>
     <p>
       This specific appliation was denied because:
       <ul>
