--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <%= favicon_link_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500,700&display=swap" rel="stylesheet">
+
     <!-- reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
@@ -33,17 +36,16 @@
 
   <body>
 
-    <%= javascript_include_tag 'mdb_framework'%>
-    
+
     <div class="non-footer">
       <%= render 'layouts/navbar' %>
       <%= render 'layouts/notifications' %>
-
       <%= yield %>
     </div>
 
     <%= render 'layouts/footer' %>
 
+    <%= javascript_include_tag 'mdb_framework'%>
     <%= yield :additional_js %>
   </body>
 </html>
