--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -42,7 +42,7 @@
             You must prove you can't handle this unexpected expense (such as a health bill, cell phone replacement, or need to attend a funeral).
           </p>
 
-          <%= link_to "Apply Now", new_hardship_path, class: "btn btn-primary btn-lg" %>
+          <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
 
         </div> <!-- End Hardship -->
 
@@ -74,7 +74,7 @@
             TOCA Cares believes in the value of a college education.  We will provide 80% of your tuition (up to $1,250 per year for employees after 6 months of employment and $2,500 per year after 2 years of employment).
           </p>
 
-          <%= link_to "Apply Now", new_scholarship_path, class: "btn btn-primary btn-lg" %>
+          <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
 
           </div> <!-- End scholarship -->
 
@@ -101,7 +101,7 @@
             TOCA Cares will pay 80% (up to $500 per year) of the costs of joining or participating in a charity serving your local community.  This is not a subsity for you giving to a charity; it is a subsity for you participating, such as the cost of joining a Rotary Club, being a Big Brother or Big Sister, or coaching a soccer team for disadvantaged kids.
           </p>
 
-          <%= link_to "Apply Now", new_charity_path, class: "btn btn-primary btn-lg" %>
+          <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
 
         </div> <!-- Grid column -->
 
